--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
+    "env": "0.0.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
   }
