--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv-webpack": "^2.0.0",
     "eslint": "^6.3.0",
     "eslint-loader": "^3.0.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
     "webpack": "4.39.3",
